--- a/style.css
+++ b/style.css
@@ -190,6 +190,7 @@ body {
   background-image: -webkit-linear-gradient(top, #fff3d9, #fffbf2);
   background-image: -o-linear-gradient(top, #fff3d9, #fffbf2);
   background-image: linear-gradient(to bottom, #fff3d9, #fffbf2);
+  font-size: 1rem;
 }
 
 .wrapper {
@@ -201,7 +202,7 @@ body {
 header {
   font-family: "Amatic SC", cursive;
   height: 100vh;
-  background: url(assets/test.svg) no-repeat center;
+  background: url(assets/test4.svg) no-repeat center;
   background-size: cover;
 }
 
@@ -219,15 +220,20 @@ header {
 }
 
 h1 {
-  margin: 2% 0;
-  font-size: 5rem;
+  margin: 0;
+  font-size: 4.5rem;
   text-align: center;
+}
+
+.message {
+  margin: 0 0 1% 0;
+  color: #5a667a;
 }
 
 .tuner {
   width: 80%;
   border: 6px solid #000;
-  border-radius: 5px;
+  border-radius: 75px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -261,7 +267,7 @@ h1 {
   -ms-flex-align: center;
   align-items: center;
   font-size: 3rem;
-  margin: 1%;
+  margin: 1% 2%;
   background: #fff;
   -webkit-transition: .1s all ease-out;
   -o-transition: .1s all ease-out;
@@ -274,18 +280,34 @@ h1 {
   transform: scale(1.1);
 }
 
+.tuner.full-step {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#55dab8), to(#28ba95));
+  background-image: -webkit-linear-gradient(top, #55dab8, #28ba95);
+  background-image: -o-linear-gradient(top, #55dab8, #28ba95);
+  background-image: linear-gradient(to bottom, #55dab8, #28ba95);
+}
+
 select {
   width: 300px;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   border: none;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
   border-bottom: 4px solid #000;
   padding: 5px;
-  margin-bottom: 25%;
+  margin-bottom: 15%;
   text-align: center;
   background: transparent;
+  color: #5a667a;
+}
+
+option {
+  color: #000;
+}
+
+.song-list span {
+  color: #da7655;
 }
 
 /*# sourceMappingURL=style.css.map */
