--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -1,7 +1,7 @@
 header {
-    font-family: $baseFont;
+    font-family: $base-font;
     height: 100vh;
-    background: url(assets/test.svg) no-repeat center;
+    background: url(assets/test4.svg) no-repeat center;
     background-size: cover;
 }
 
@@ -12,21 +12,26 @@ header {
 }
 
 h1 {
-    margin: 2% 0;
-    font-size: 5rem;
+    margin: 0;
+    font-size: 4.5rem;
     text-align: center;
+}
+
+.message {
+    margin: 0 0 1% 0;
+    color: #5a667a;
 }
 
 .tuner {
     width: 80%;
     border: 6px solid #000;
-    border-radius: 5px;
+    border-radius: 75px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
     padding: 2% 0;
-    background-image: linear-gradient(to bottom, $tunerBackground, darken($tunerBackground, 15%));
+    background-image: linear-gradient(to bottom, $tuner-background-1, darken($tuner-background-1, 15%));
     .button {
         border-radius: 50%;
         height: 100px;
@@ -36,8 +41,8 @@ h1 {
         justify-content: center;
         align-items: center;
         font-size: 3rem;
-        margin: 1%;
-        background: $buttonColour;
+        margin: 1% 2%;
+        background: $button-colour;
         transition: .1s all ease-out;
         &:hover {
             transform: scale(1.1);
@@ -45,14 +50,27 @@ h1 {
     }
 }
 
+.tuner.full-step {
+    background-image: linear-gradient(to bottom, $tuner-background-2, darken($tuner-background-2, 15%));
+}
+
 select {
     width: 300px;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     border: none;
     appearance: none;
     border-bottom: 4px solid #000;
     padding: 5px;
-    margin-bottom: 25%;
+    margin-bottom: 15%;
     text-align: center;
     background: transparent;
+    color: #5a667a;
+}
+
+option {
+    color: #000;
+}
+
+.song-list span {
+    color: #da7655;
 }
