--- a/styles/partials/_base.scss
+++ b/styles/partials/_base.scss
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-    background-image: linear-gradient(to bottom, darken($background-colour, 5%), $background-colour);
+    background-image: linear-gradient(to bottom, $background-colour, darken($background-colour, 10%));
     font-size: 1rem;
 }
 
