--- a/style.css
+++ b/style.css
@@ -232,7 +232,7 @@ h1 {
 
 .tuner {
   width: 80%;
-  border: 6px solid #000;
+  border: 5px solid #000;
   border-radius: 75px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -256,7 +256,6 @@ h1 {
   border-radius: 50%;
   height: 100px;
   width: 100px;
-  border: 4px solid #000;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -267,7 +266,7 @@ h1 {
   -ms-flex-align: center;
   align-items: center;
   font-size: 3rem;
-  margin: 1% 2%;
+  margin: 1%;
   background: #fff;
   -webkit-transition: .1s all ease-out;
   -o-transition: .1s all ease-out;
@@ -278,6 +277,8 @@ h1 {
   -webkit-transform: scale(1.1);
   -ms-transform: scale(1.1);
   transform: scale(1.1);
+  background: #da7655;
+  border: 2px solid #000;
 }
 
 .tuner.full-step {
@@ -320,7 +321,7 @@ ul a {
   color: #000;
   text-decoration: none;
   display: inline-block;
-  margin: 15% 0;
+  margin-bottom: 15%;
 }
 
 /*# sourceMappingURL=style.css.map */
