--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -24,7 +24,7 @@ h1 {
 
 .tuner {
     width: 80%;
-    border: 6px solid #000;
+    border: 5px solid #000;
     border-radius: 75px;
     display: flex;
     justify-content: space-evenly;
@@ -36,16 +36,18 @@ h1 {
         border-radius: 50%;
         height: 100px;
         width: 100px;
-        border: 4px solid #000;
+        // border: 1px solid #000;
         display: flex;
         justify-content: center;
         align-items: center;
         font-size: 3rem;
-        margin: 1% 2%;
+        margin: 1%;
         background: $button-colour;
         transition: .1s all ease-out;
         &:hover {
             transform: scale(1.1);
+            background: #da7655;
+            border: 2px solid #000;
         }
     }
 }
@@ -83,6 +85,6 @@ ul {
         color: #000;
         text-decoration: none;
         display: inline-block;
-        margin: 15% 0;
+        margin-bottom: 15%;
     }
 }
