got sound to play on button push

--- a/style.css
+++ b/style.css
@@ -233,7 +233,7 @@ h1 {
 .tuner {
   width: 80%;
   border: 5px solid #000;
-  border-radius: 75px;
+  border-radius: 80px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -307,6 +307,10 @@ option {
   color: #000;
 }
 
+.select-tuning {
+  color: #5a667a;
+}
+
 .song-list span {
   color: #da7655;
 }
@@ -321,7 +325,7 @@ ul a {
   color: #000;
   text-decoration: none;
   display: inline-block;
-  margin-bottom: 15%;
+  margin-bottom: 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
