--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -36,7 +36,6 @@ h1 {
         border-radius: 50%;
         height: 100px;
         width: 100px;
-        // border: 1px solid #000;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -44,10 +43,12 @@ h1 {
         margin: 1%;
         background: $button-colour;
         transition: .1s all ease-out;
+        box-shadow: 3px 3px 5px #5a667a;
         &:hover {
-            transform: scale(1.1);
-            background: #da7655;
-            border: 2px solid #000;
+            transform: scale(.95);
+            box-shadow: none;
+            color: #da7655;
+            font-size: 2.5rem;
         }
     }
 }
@@ -67,6 +68,9 @@ select {
     text-align: center;
     background: transparent;
     color: #5a667a;
+    &:focus {
+        border: 4px solid #da7655;
+    }
 }
 
 option {
@@ -90,5 +94,8 @@ ul {
         text-decoration: none;
         display: inline-block;
         margin-bottom: 20px;
+        &:hover {
+            color: #da7655;
+        }
     }
 }
