refactored all the code

--- a/style.css
+++ b/style.css
@@ -282,7 +282,7 @@ h1 {
   -webkit-box-shadow: none;
   box-shadow: none;
   color: #da7655;
-  font-size: 2.5rem;
+  font-size: 2.7rem;
 }
 
 .tuner.full-step {
@@ -307,10 +307,6 @@ select {
   color: #5a667a;
 }
 
-select:focus {
-  border: 4px solid #da7655;
-}
-
 option {
   color: #000;
 }
@@ -326,18 +322,12 @@ option {
 ul {
   margin: 0;
   padding: 0;
-  display: none;
 }
 
-ul a {
+ul li {
   color: #000;
   text-decoration: none;
-  display: inline-block;
   margin-bottom: 20px;
-}
-
-ul a:hover {
-  color: #da7655;
 }
 
 /*# sourceMappingURL=style.css.map */
