--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -48,7 +48,7 @@ h1 {
             transform: scale(.95);
             box-shadow: none;
             color: #da7655;
-            font-size: 2.5rem;
+            font-size: 2.7rem;
         }
     }
 }
@@ -68,9 +68,9 @@ select {
     text-align: center;
     background: transparent;
     color: #5a667a;
-    &:focus {
-        border: 4px solid #da7655;
-    }
+    // &:focus {
+    //     border: 4px solid #da7655;
+    // }
 }
 
 option {
@@ -88,14 +88,9 @@ option {
 ul {
     margin: 0;
     padding: 0;
-    display: none;
-    a {
+    li {
         color: #000;
         text-decoration: none;
-        display: inline-block;
         margin-bottom: 20px;
-        &:hover {
-            color: #da7655;
-        }
     }
 }
