--- a/styles/partials/_base.scss
+++ b/styles/partials/_base.scss
@@ -2,6 +2,7 @@
 
 $tuner-background-1: #bada55;
 $tuner-background-2:  #55dab8;
+$tuner-background-3: #dd1c1c;
 $background-colour: #fffbf2;
 $button-colour: #fff;
 $base-font: 'Amatic SC', cursive;
