--- a/styles/partials/_base.scss
+++ b/styles/partials/_base.scss
@@ -1,10 +1,13 @@
 // VARIABLES
 
+$tuner-background-default: #999;
 $tuner-background-1: #bada55;
-$tuner-background-2:  #55dab8;
-$tuner-background-3: #dd1c1c;
+$tuner-background-2: #d89ff9;
+$tuner-background-3: #55dab8;
 $background-colour: #fffbf2;
 $button-colour: #fff;
+$second-font-colour: #5a667a;
+$accent-font-colour:#da7655;
 $base-font: 'Amatic SC', cursive;
 
 html {
