--- a/styles/partials/_base.scss
+++ b/styles/partials/_base.scss
@@ -19,8 +19,13 @@ body {
     font-size: 1rem;
 }
 
+h1, h2 {
+    margin: 0;
+    padding: 0;
+}
+
 .wrapper {
     max-width: 1600px;
     width: 95%;
-    margin: 0 auto 5% auto;
+    margin: 0 auto 4% auto;
 }
