--- a/styles/partials/_index.scss
+++ b/styles/partials/_index.scss
@@ -12,13 +12,17 @@ header {
 }
 
 h1 {
-    margin: 0;
     font-size: 4.5rem;
     text-align: center;
 }
 
+h2 {
+    font-size: 1.5rem;
+    margin-top: 8%;
+}
+
 .message {
-    margin: 0 0 1% 0;
+    margin: 0 0 10px 0;
     color: $second-font-colour;
 }
 
@@ -73,7 +77,7 @@ select {
     appearance: none;
     border-bottom: 4px solid #000;
     padding: 5px;
-    margin-bottom: 15%;
+    margin-bottom: 10%;
     text-align: center;
     background: transparent;
     color: $second-font-colour;
@@ -97,3 +101,36 @@ li {
     margin-bottom: 20px;
 }
 
+// MEDIA QUERIES
+
+@media (max-width: 915px) {
+
+    .tuner {
+        width: 50%;
+        .button {
+            margin: 3% 3%;
+        }
+    }
+}
+
+@media (max-width: 475px) {
+    
+    h1 {
+        font-size: 3.8rem;
+    }
+}
+
+@media (max-width: 400px) {
+
+    h1 {
+        font-size: 3rem;
+    }
+
+    h2 {
+        font-size: 1.3rem;
+    }
+
+    select {
+        width: 250px;
+    }
+}
