--- a/styles/partials/_base.scss
+++ b/styles/partials/_base.scss
@@ -10,6 +10,8 @@ $second-font-colour: #5a667a;
 $accent-font-colour:#da7655;
 $base-font: 'Amatic SC', cursive;
 
+// BASE STYLES
+
 html {
     font-size: 125%;
 }
