--- a/styles/partials/_index.scss
+++ b/styles/partials/_index.scss
@@ -24,13 +24,14 @@ h2 {
 
 select {
     width: 300px;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     border: none;
     appearance: none;
     border-bottom: 4px solid #000;
     padding: 5px;
     margin-bottom: 10%;
     text-align: center;
+    text-align-last: center; //needed for Chrome
     background: transparent;
     color: $second-font-colour;
     cursor: context-menu;
@@ -119,6 +120,23 @@ li {
             margin: 3% 3%;
         }
     }
+    header {
+        background-position-x: 0;
+    }
+    .content {
+        padding-left: 12%;
+    }
+}
+
+@media (max-width: 650px) {
+    
+    header {
+        background: none;
+    }
+
+     .content {
+        padding-left: 0;
+    }
 }
 
 @media (max-width: 475px) {
@@ -136,6 +154,7 @@ li {
 
     h2 {
         font-size: 1.3rem;
+        text-align: center;
     }
 
     select {
