--- a/styles/partials/_index.scss
+++ b/styles/partials/_index.scss
@@ -75,7 +75,8 @@ option {
         background: $button-colour;
         transition: .1s all ease-out;
         color: $second-font-colour;
-        &:hover {
+        &:hover,
+        &:focus {  
             color: #000;
             box-shadow: 3px 3px 5px $second-font-colour;
         }
